       documents, and including it in router descriptors took up 60% (!) of
       compressed router descriptor downloads.  Completes implementation of
       proposal 104.
     - Remove the contrib scripts ExerciseServer.py, PathDemo.py,
       and TorControl.py, as they use the old v0 controller protocol,
       and are obsoleted by TorFlow anyway.

  o Major bugfixes:
    - Fix possible segfaults in functions called from
      rend_process_relay_cell().

  o Minor bugfixes:
    - When generating information telling us how to extend to a given
      router, do not try to include the nickname if it is absent.  Fixes
      bug 467.
    - On OSX, stop warning the user that kqueue support in libevent is
      "experimental", since it seems to have worked fine for ages.
    - Fix a user-triggerable segfault in expand_filename().  (There isn't
      a way to trigger this remotely.)
    - Fix a memory leak when freeing incomplete requests from DNSPort.
      (Found by Niels Provos with valgrind.)
    - Don't try to access (or alter) the state file when running
      --list-fingerprint or --verify-config or --hash-password. (Resolves
      bug 499.)
    - Servers used to decline to publish their DirPort if their
      BandwidthRate, RelayBandwidthRate, or MaxAdvertisedBandwidth
      were below a threshold. Now they only look at BandwidthRate and
      RelayBandwidthRate.

  o Code simplifications and refactoring:
    - Revamp file-writing logic so we don't need to have the entire contents
      of a file in memory at once before we write to disk.  Tor, meet stdio.
    - Turn "descriptor store" into a full-fledged type.
    - Move all NT services code into a separate source file.
    - Unify all code that computes medians, percentile elements, etc.
    - Get rid of a needless malloc when parsing address policies.


Changes in version 0.1.2.17 - 2007-08-30
  o Major bugfixes (security):
    - We removed support for the old (v0) control protocol. It has been